Fix error with map not showing, add URL to website restrictions on API Key

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,6 @@ button[type="submit"] {
 /*--------------------------------------------Map*/
 div#map {
     min-height: 360px;
-    background-color: magenta;
 }
 
 /*--------------------------------------------Media Queries*/
